--- a/TO DO LIST/index.html
+++ b/TO DO LIST/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="todo-app">
-            <h1>Todo App</h1>
+            <h1>Todo List</h1>
             <form action="" id="task-form">
                 <input
                     type="text"
